src/objects/NotificatorStorage__c.object
<CustomObject>
    <fields>
        <fullName>InfoPercentageThreshold__c</fullName>
        <defaultValue>75</defaultValue>
        <inlineHelpText>First notification will be sent if current percent usage will be above this threshold.</inlineHelpText>
        <label>Percent Info Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Notificator Setting</label>
        <referenceTo>NotificatorSetting__c</referenceTo>
        <relationshipLabel>Notificator Storages</relationshipLabel>
        <relationshipName>NotificatorStorages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarningPercentageThreshold__c</fullName>
        <defaultValue>95</defaultValue>
        <inlineHelpText>Final notification will be sent if current percent usage will be above this threshold.</inlineHelpText>
        <label>Percent Warning Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Notificator Storage</label>
    <nameField>
        <label>Notificator Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notificator Storages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Info_Threshold_must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>InfoPercentageThreshold__c &lt; 1</errorConditionFormula>
        <errorDisplayField>InfoPercentageThreshold__c</errorDisplayField>
        <errorMessage>Percent Info Threshold must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_Threshold_must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>WarningPercentageThreshold__c &lt;1</errorConditionFormula>
        <errorDisplayField>WarningPercentageThreshold__c</errorDisplayField>
        <errorMessage>Percent Warning Threshold must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_above_Info</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(WarningPercentageThreshold__c &gt;  InfoPercentageThreshold__c)</errorConditionFormula>
        <errorDisplayField>WarningPercentageThreshold__c</errorDisplayField>
        <errorMessage>Percentage Warning Threshold must be bigger than Percentage Info Threshold</errorMessage>
    </validationRules>
</CustomObject>